--- a/src/Components/StatusPage/DevicePane/DevicePane.css
+++ b/src/Components/StatusPage/DevicePane/DevicePane.css
@@ -14,6 +14,9 @@
     height: 100%;
 }
 
+.devicePane ul {
+    gap: 2rem;
+}
 
 .devicePane .deviceDiv {
     padding: 1rem;
@@ -29,14 +32,11 @@
 }
 
 .devicePane .device {
-    background: #d2c7c7;
-    color: black;
     width: 10rem;
-    height: 10rem;
-    padding: 1rem;
     border: .005rem #000 solid;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     border-radius: 5px;
+    overflow: hidden;
 }
 
 .devicePane .device:hover {
@@ -45,9 +45,19 @@
 }
 
 
-.devicePane .Lights {
-    background-image: url("light.png");
+.devicePane .deviceImage {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+
+    width: 100%;
+    aspect-ratio: 1/1;
+}
+
+.devicePane .deviceInfo {
+    padding: .5rem;
+}
+
+.devicePane .deviceInfo p {
+    margin-bottom: .5rem;
 }
