--- a/src/Components/StatusPage/DevicePane/DevicePane.css
+++ b/src/Components/StatusPage/DevicePane/DevicePane.css
@@ -14,10 +14,6 @@
     height: 100%;
 }
 
-.devicePane ul {
-    gap: 2rem;
-}
-
 .devicePane .deviceDiv {
     padding: 1rem;
     border-bottom: 0.005rem solid black;
@@ -26,9 +22,10 @@
 .devicePane .deviceList {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
     list-style: none;
+    gap: 2rem;
 }
 
 .devicePane .device {
