--- a/src/Components/StatusPage/DevicePane/DeviceSettingsPopup/DeviceSettingsPopup.css
+++ b/src/Components/StatusPage/DevicePane/DeviceSettingsPopup/DeviceSettingsPopup.css
@@ -5,12 +5,14 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: flex-start;
-    gap: 2rem;
+    gap: 3rem;
 
     position: relative;
 
+    min-width: 50%;
+    min-height: 50%;
     padding: 2rem 4rem;
     border: #fff .1rem solid;
 }
@@ -41,18 +43,50 @@
     
     border-left: .1rem solid #ffffff;
     border-bottom: .1rem solid #ffffff;
-    border-bottom-left-radius: .5rem;
+    border-radius: 0 0 0 .5rem;
 }
 
 .deviceSettingsPopup .closeButton:hover {
     background-color: rgb(21, 21, 21);
-
 }
 
 .deviceSettingsPopup .closeButton img {
     height: 3rem;
 }
 
+.deviceSettingsPopup .option {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    width: 100%;
+}
+
+
 .deviceSettingsPopup .slider {
     width: 100%;
+}
+
+.deviceSettingsPopup .inputDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+
+    width: 100%;
+}
+
+.deviceSettingsPopup .colorIndicator {
+    background-color: transparent;
+
+    width: 2rem;
+    aspect-ratio: 1/1;
+    border: .1rem solid #ffffff;
+    border-radius: .3rem;
+}
+
+.deviceSettingsPopup .lampColorInput {
+    height: 0;
+    width: 0;
+    border: none;
 }
