Updated statusPage for mobile sizing

--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -4,7 +4,7 @@
     font-family: 'Courier New', Courier, monospace;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     gap: 2rem;
     
