--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.mobileSize{
+  width : 412px;
+  overflow: hidden;
+}
 
 .noUlFormatting {
   list-style-type: none;
