--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,28 +4,22 @@
 .pageHeader {
     background-color: #172121;
     color: #DBE0D7;
-
-    
-
+    display: flex;
+    justify-content: space-between;
     text-align: left;
 
-    width: 100%;
+    width : 412px;
     height: 4rem;
     padding: 1rem;
 }
 
-.pageHeader {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
-    width: 100%;
-    height: 5rem;
-}
+
+
 
 .logo {
     flex: 1;
     font-family: 'Matemasie', cursive;
+    font-size: 1rem;
 }
 
 .navList {
@@ -35,7 +29,7 @@
     list-style: none;
     justify-content: flex-start;
     align-items: center;
-    gap: 10rem;
+    gap: 2rem;
 
     width: min-content;
 }
