--- a/src/Components/StatusPage/StatusPage.css
+++ b/src/Components/StatusPage/StatusPage.css
@@ -1,8 +1,8 @@
 .statusPage {
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     flex: 1;
-    width: 100%;
+    width: 412px;
 }
 .buttonText {
   font-size: 40px;
@@ -18,19 +18,6 @@
 .clock:hover {
   border-radius: 2rem;
   background-color: #616278;
-}
-.split {
-  width: 50%;
-}
-
-.left {
-  left: 0;
-}
-
-.right {
-  right: 0;
-  padding: 0px;
-  background-color: #444554;
 }
 
 .timeInput {
