added a div for the clock which shows the time and added borders on the sides of the mobileSize div.

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,15 @@
 .mobileSize{
   width : 412px;
   overflow: hidden;
+  border-right: 0.005rem solid black;
+  border-left: 0.005rem solid black;
+}
+
+.clockDiv {
+    width: 412px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .noUlFormatting {
