--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -33,6 +33,22 @@
     cursor: pointer;
 }
 
+.settingsPage .actionButtons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 1rem;
+}
+
+.settingsPage .actionButtons button {
+    font-size: 1rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    background: #f0f0f0;
+    cursor: pointer;
+}
+
 .settingsPage .place {
     display: flex;
     flex-direction: column;
