--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -66,7 +68,7 @@ body {
 }
 
 #root {
-    background: #444554;
+    background: #000000;
     color: #DBE0D7;
 
     display: flex;
@@ -88,7 +90,12 @@ body {
     width: max-content;
 }
 
-
+.digitalClock {
+    font-family: 'Noto Sans', sans-serif;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+    }
 
  /* FUCKING BOOTSTRAP CSS FIX */
 
