--- a/src/Components/SettingsPage/SettingsPage.css
+++ b/src/Components/SettingsPage/SettingsPage.css
@@ -1,28 +1,34 @@
 
 .settingsPage {
     font-size: 1.5rem;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Noto Sans', sans-serif;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 2rem;
     
+    background: #000000;
 
     width: 100vw;
-    margin: 2rem;
+
+    margin-top: 1rem;
+    margin-bottom: 3rem;
 }
 
 .settingsPage>div {
-    background: #393939;
+    background: #1E1E1E;
 
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    column-gap: 2rem;
 
-    width: 40%;
+    width: 90%;
     height: 80%;
     padding: 2rem;
+
+    border-radius: 1rem;
 }
 
 .settingsPage>div h2 {
@@ -36,7 +42,8 @@
 .settingsPage .place {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .includedDevicesPlaceTitle {
@@ -55,7 +62,13 @@
     justify-content: space-between;
     gap: 1rem;
 }
-
+ 
+.sleepGoalsDiv .goal input {
+    border-radius: 1rem;
+    width: 6rem;
+    padding-left: 1rem;
+    
+}
 
 
 
@@ -65,6 +78,7 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 1rem;
+    accent-color: #9FB641;
 }
 
 .settingsPage .device input {
